--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.LaboratorioListViewsAndAdapters"
+        android:theme="@style/Theme.StarbuzzApp"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".DrinkActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DrinkCategoryActivity"
+            android:exported="false" />
+        <activity
+            android:name=".TopLevelActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
